--- a/templates/register.html
+++ b/templates/register.html
@@ -8,6 +8,11 @@
 </head>
 <body class="body">
     <form action="/register" method="post">
+        {% if error %}
+            <div style="color: red; margin-bottom: 15px;">
+                {{ error }}
+            </div>
+        {% endif %}
         <div>
             <label for="user-login">Login: </label>
             <input type="text"
